skinuta dinamicka pozadina
nepouzdan stream

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<main>
 
 			<div id="liveBackground">
-				<iframe src="https://www.youtube.com/embed/UabX1yNMQoc?autoplay=1&mute=1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<!-- <iframe src="https://www.youtube.com/embed/UabX1yNMQoc?autoplay=1&mute=1" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 			</div>
 
 			<div class="container">
